--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "preview": "nuxt preview"
   },
   "dependencies": {
-    "nuxt": "^3.12.4"
+    "@mdi/font": "^7.4.47",
+    "@pinia/nuxt": "^0.5.1",
+    "nuxt": "^3.12.4",
+    "sass": "^1.77.8",
+    "vuetify": "^3.6.13-3.7.0-beta.0.0"
   }
 }
