--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@pinia/nuxt": "^0.5.1",
     "nuxt": "^3.12.4",
     "sass": "^1.77.8",
+    "styled-components": "^6.1.12",
     "vuetify": "^3.6.13-3.7.0-beta.0.0"
   }
 }
