--- a/package.json
+++ b/package.json
@@ -8,11 +8,6 @@
     "preview": "nuxt preview"
   },
   "dependencies": {
-    "@mdi/font": "^7.4.47",
-    "@pinia/nuxt": "^0.5.1",
-    "nuxt": "^3.12.4",
-    "sass": "^1.77.8",
-    "styled-components": "^6.1.12",
-    "vuetify": "^3.6.13-3.7.0-beta.0.0"
+    "nuxt": "^3.12.4"
   }
 }
